Bug 40240 - plymouth from git does not build
Summary: plymouth from git does not build
Status: RESOLVED FIXED
Alias: None
Product: plymouth
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium blocker
Assignee: Ray Strode [halfline]
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-19 09:42 UTC by Maciej Piechotka
Modified: 2011-08-19 14:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Full build log (133.07 KB, application/octet-stream)
2011-08-19 09:42 UTC, Maciej Piechotka
Details

Description Maciej Piechotka 2011-08-19 09:42:49 UTC
Created attachment 50381 [details]
Full build log

libtool: compile:  x86_64-pc-linux-gnu-gcc -DHAVE_CONFIG_H -I. -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress -I../../../.. -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/../../../libply -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/../../../libply-splash-core -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/../../../libply-splash-graphics -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/../../.. -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/../.. -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/.. -I/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress -Wall -Wextra -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wwrite-strings -Wnested-externs -Wpointer-arith -Wswitch-enum -Wstrict-aliasing=2 -Winit-self -Wunsafe-loop-optimizations -Wno-missing-field-initializers -Wno-unused-parameter -Wcast-align -Wsign-compare -Wp,-D_FORTIFY_SOURCE=2 -DPLYMOUTH_IMAGE_DIR=\"/usr/share/plymouth/\" -DPLYMOUTH_TIME_DIR=\"/var/lib/plymouth/\" -DPLYMOUTH_LOGO_FILE=\"/usr/share/plymouth/bizcom.png\" -DPLYMOUTH_BACKGROUND_COLOR=0x5d5950 -DPLYMOUTH_BACKGROUND_END_COLOR=0x3a362f -DPLYMOUTH_BACKGROUND_START_COLOR=0x807c71 -O2 -pipe -ggdb -march=native -msahf -mcx16 -fgcse-sm -fgcse-las -fgcse-after-reload -ftracer -w -floop-interchange -floop-strip-mine -floop-block -ftree-loop-linear -floop-parallelize-all -ftree-parallelize-loops=4 -ftree-loop-distribution -ftree-loop-im -fsched-pressure -fsched-spec-load -I/usr/include/libdrm -MT throbgress_la-plugin.lo -MD -MP -MF .deps/throbgress_la-plugin.Tpo -c /var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/plugin.c  -fPIC -DPIC -o .libs/throbgress_la-plugin.o
/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/plugin.c: In function 'draw_background':
/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/plugin.c:452:3: error: 'plugin' undeclared (first use in this function)
/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth/src/plugins/splash/throbgress/plugin.c:452:3: note: each undeclared identifier is reported only once for each function it appears in
make[5]: Leaving directory `/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth-9999_build/src/plugins/splash/throbgress'
make[5]: *** [throbgress_la-plugin.lo] Error 1
make[4]: Leaving directory `/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth-9999_build/src/plugins/splash'
make[4]: *** [all-recursive] Error 1
make[3]: Leaving directory `/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth-9999_build/src/plugins'
make[3]: *** [all-recursive] Error 1
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth-9999_build/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/var/tmp/paludis/sys-boot-plymouth-9999/work/plymouth-9999_build'
make: *** [all] Error 2
Comment 1 Ray Strode [halfline] 2011-08-19 14:35:09 UTC
oh, thanks.

I've pushed a small change that should fix this, but I'm not on a machine with a compiler at the moment, so I can't test it in great detail.  reopen if there are any more issues.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.