throbgress: add plugin decelartion

This should fix the build.

https://bugs.freedesktop.org/show_bug.cgi?id=40240